# kizuna

./: AGENTS.md  README.md  install.sh  pyproject.toml
.claude/: settings.json  settings.template.json
.github/workflows/: test.yml
hermes-plugins/download-guard/: __init__.py  plugin.yaml
hermes-plugins/guard-compiler/: __init__.py  plugin.yaml
hermes-plugins/search-audit/: __init__.py  plugin.yaml
hermes-plugins/stop-gate/: __init__.py  plugin.yaml
scripts/: db.py  pre_compact_hook.py  pre_tool_use_hook.py  session_review.py  stop_hook.py  user_prompt_hook.py
tests/: test_stop_hook.py
